Add support for mobile

--- a/public/JonRose.html
+++ b/public/JonRose.html
@@ -17,7 +17,6 @@
     <title>Jon Rose</title>
 </head>
 <body>
-    <div id="comingSoon">Mobile version coming soon</div>
     <section id="landing">
         <div id="titleWrapper">
             <h1 class="title">Jon Rose Dev</h1>
@@ -39,8 +38,6 @@
         <div id="intro">
             <img class="bitmojiMe"src="assets/me.png" alt="bitmoji me"/>
             <h5 class="aboutMe">Oh hello, didn't see you there.</h5>
-            <br>
-            <br>
             <h5 class="aboutMe">My name is Jon Rose and I build stuff for the web. From simple websites to full stack apps I like to build it all.
                 If you have some time, take a look below at some of what I've worked on and the technologies I use.
                 Who knows, maybe we can collaborate on something awesome!
@@ -154,22 +151,19 @@
                 <div class="blogSectionItem">
                     <h2>I Tweet</h2>
                     <a class="twitter-timeline" data-width="700" data-height="500" data-theme="dark" href="https://twitter.com/JonRoseDev?ref_src=twsrc%5Etfw">Tweets by JonRoseDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-                <div class="blogSectionItem">
-                    <h2>I Blog</h2>
-                    <div id="mediumFeed">
-                        <iframe src="https://medium.com/@JonRoseDev"></iframe>
-                    </div>
+                    <a id="twitterMobile" class="twitter-timeline" data-width="350" data-height="250" data-theme="dark" href="https://twitter.com/JonRoseDev?ref_src=twsrc%5Etfw">Tweets by JonRoseDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
             <div id="goodbye">
-                <img id="talkSoon" src="assets/bye.png" alt="bye">
                 <div id="contactMeWrapper">
-                    <h2 id="contactMeText">And I'm here too</h2>
-                    <div id="contactLinks">
-                        <a href="https://www.linkedin.com/in/jonathan-rose-4b120384"><img src="assets/linkedin.png"></a>
-                        <a href="https://github.com/SUMmaro400ex"><img src="assets/github.png"></a>
-                        <a  href="mailto:jon@jonrose.co"><img src="assets/email.png"></a>
+                    <img id="talkSoon" src="assets/bye.png" alt="bye">
+                    <div id="hereToo">
+                        <h2 id="contactMeText">And I'm here too</h2>
+                        <div id="contactLinks">
+                            <a href="https://www.linkedin.com/in/jonathan-rose-4b120384"><img src="assets/linkedin.png"></a>
+                            <a href="https://github.com/SUMmaro400ex"><img src="assets/github.png"></a>
+                            <a  href="mailto:jon@jonrose.co"><img src="assets/email.png"></a>
+                        </div>
                     </div>
                 </div>
             </div>
